@@ -4,7 +4,13 @@ import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
+import org.apache.commons.lang3.tuple.Pair;
 
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.sonarsource.sonarlint.core.StandaloneSonarLintEngineImpl;
 import org.sonarsource.sonarlint.core.analysis.api.ClientInputFile;
 import org.sonarsource.sonarlint.core.client.api.common.analysis.Issue;
@@ -18,17 +24,24 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
+
+import static junit.framework.Assert.assertEquals;
 
 public class SonarQubeTests {
     public static final String newLine = System.lineSeparator();
+    public static final String JAVA_CLASS_PATH = "java.class.path";
+    public static final String SONAR_JAVA_PLUGIN = "sonar-java-plugin";
+    private static final String RULE_PREFIX = "java:S";
+    private static final String PROJECT_ENTRY_PATH =
+            Path.of("src", "main", "java", "edu", "kit", "informatik")
+            .normalize()
+            .toString();
+    private static final String JAVA_FILE_PREFIX = ".java";
     private static ArrayList<Issue> issues;
-    private static final String rulePrefix = "java:S";
-    private static final String projectEntryPath = "src/main/java";
-    private static final String packagePath = "edu/kit/informatik/";
-    private static final String javaFilePrefix = ".java";
+    static Logger logger = LoggerFactory.getLogger(SonarQubeTests.class);
 
     @BeforeAll
     public static void setUpBeforeClass() throws Exception {
@@ -38,7 +51,7 @@ public class SonarQubeTests {
         // TODO: or with eclipse cleanup
 
         Path javaPlugin = getJavaPlugin();
-        var path = Path.of(projectEntryPath, packagePath).toAbsolutePath();
+        var path = Path.of(PROJECT_ENTRY_PATH).toAbsolutePath();
         var javaFiles = getFiles(path);
 
         StandaloneGlobalConfiguration configuration = StandaloneGlobalConfiguration.builder().addEnabledLanguage(Language.JAVA).addPlugins(javaPlugin).setWorkDir(path).build();
@@ -49,346 +62,67 @@ public class SonarQubeTests {
         standaloneSonarLintEngine.stop();
     }
 
-//    @DisplayName("Test NonFinalAttributesShouldBeFinal")
-//    @Test
-//    void testNonFinalAttributesShouldBeFinal() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
-//        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
-//    }
-
-//    @DisplayName("Test SystemDependentLineBreak")
-//    @Test
-//    void testSystemDependentLineBreak() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
-//        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
-//    }
-
-    @DisplayName("Test RawType")
-    @Test
-    void testRawType() {
-        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + "3740"));
-        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
+    @DisplayName("Test Codebase")
+    @ParameterizedTest(name = "{index} => relevantIssueNumbers={0}")
+    @MethodSource("getTestTypeParameters")
+    void testCodeBase(Pair<String, List<String>> relevantIssueNumbers) {
+        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers.getRight()));
     }
 
-    @DisplayName("Test ConcreteClassInsteadOfInterface")
-    @Test
-    void testConcreteClassInsteadOfInterface() {
-        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + "1319"));
-        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
-    }
-
-    @DisplayName("Test AssertInsteadOfIfLoop")
-    @Test
-    void testAssertInsteadOfIfLoop() {
-        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(
-                Arrays.asList(
-                        rulePrefix + "5960",
-                        rulePrefix + "4274"
+    private static Stream<Arguments> getTestTypeParameters() {
+        return Stream.of(
+//                Arguments.of(Pair.of("Test testNonFinalAttributesShouldBeFinal", List.of(RULE_PREFIX + ))),
+//                Arguments.of(Pair.of("Test SystemDependentLineBreak", List.of(RULE_PREFIX + ))),
+                Arguments.of(Pair.of("Test RawType", List.of(RULE_PREFIX + "3740"))),
+                Arguments.of(Pair.of("Test ConcreteClassInsteadOfInterface", List.of(RULE_PREFIX + "1319"))),
+                Arguments.of(Pair.of("Test AssertInsteadOfIfLoop", List.of(RULE_PREFIX + "5960", RULE_PREFIX + "4274"))),
+//                Arguments.of(Pair.of("Test ObjectInsteadOfConcreteClass", List.of(RULE_PREFIX + ))),
+//                Arguments.of(Pair.of("Test PublicEnumInsideClassAndNotInSeparateFile", List.of(RULE_PREFIX + ))),
+//                Arguments.of(Pair.of("Test VisibilityAsLowAsPossible", List.of(RULE_PREFIX + ))),
+                Arguments.of(Pair.of("Test Code Duplication", List.of(RULE_PREFIX + "4144"))),
+//                Arguments.of((Pair.of("Test CodeDuplicationRepetitionsFixableByInheritance", List.of(RULE_PREFIX + ))),
+//                Arguments.of((Pair.of("Test InheritanceInsteadOfEnums", List.of(RULE_PREFIX + ))),
+//                Arguments.of((Pair.of("Test OperationsInsteadOfDomain", List.of(RULE_PREFIX + ))),
+//                Arguments.of((Pair.of("Test HardcodedLogic", List.of(RULE_PREFIX + ))),
+//                Arguments.of((Pair.of("Test StringReferences", List.of(RULE_PREFIX + ))),
+//                Arguments.of((Pair.of("Test ExceptionsForControlFlow", List.of(RULE_PREFIX + ))),
+//                Arguments.of((Pair.of("Test TryCatchBlock", List.of(RULE_PREFIX + ))),
+//                Arguments.of((Pair.of("Test UnspecifiedErrorMessage", List.of(RULE_PREFIX + )))),
+//                Arguments.of((Pair.of("Test WrongLoopType", List.of(RULE_PREFIX + ))),
+//                Arguments.of((Pair.of("Test UnnecessaryComplexity", List.of(RULE_PREFIX + ))),
+//                Arguments.of((Pair.of("Test ClumsySolution", List.of(RULE_PREFIX + ))),
+//                Arguments.of((Pair.of("Test ParsingIntegerValues", List.of(RULE_PREFIX + ))),
+                Arguments.of(Pair.of("Test UtilityClass", List.of(RULE_PREFIX + "1118"))),
+//                Arguments.of(Pair.of("Test UnsafeCast", List.of(RULE_PREFIX + ))),
+//                Arguments.of(Pair.of("Test EmptyConstructor", List.of(RULE_PREFIX + ))),
+//                Arguments.of(Pair.of("Test MeaninglessConstant", List.of(RULE_PREFIX + ))),
+//                Arguments.of(Pair.of("Test Scanner", List.of(RULE_PREFIX + ))),
+                Arguments.of(Pair.of("Test UnusedElement",
+                        List.of(RULE_PREFIX + "1144", RULE_PREFIX + "1068", RULE_PREFIX + "1481"))
+                ),
+//                Arguments.of(Pair.of("Test MissingThrowsInMethodSignature", List.of(RULE_PREFIX + ))),
+//                Arguments.of(Pair.of("Test PublicEnumInClass", List.of(RULE_PREFIX + ))),
+//                Arguments.of(Pair.of("Test ParsingIntegerValues", List.of(RULE_PREFIX + ))),
+//                Arguments.of(Pair.of("Test TrivialJavaDoc", List.of(RULE_PREFIX + ))),
+//                Arguments.of(Pair.of("Test BadNaming", List.of(RULE_PREFIX + ))),
+//                Arguments.of(Pair.of("Test DataEncapsulationViolation", List.of(RULE_PREFIX + ))),
+//                Arguments.of(Pair.of("Test SeparationOfLogicAndInteraction", List.of(RULE_PREFIX + ))),
+//                Arguments.of(Pair.of("Test TooComplexCode", List.of(RULE_PREFIX + ))),
+//                Arguments.of(Pair.of("Test StaticMethods", List.of(RULE_PREFIX + ))),
+                Arguments.of(Pair.of("Test StaticAttributeOfInstanceAttribute", List.of(RULE_PREFIX + "1170"))),
+                Arguments.of(Pair.of("Test FinalModifier", List.of(RULE_PREFIX + "3008"))),
+//                Arguments.of(Pair.of("Test ParsingIntegerValues", List.of(RULE_PREFIX + ))),
+//                Arguments.of(Pair.of("Test ToStringVsEquals", List.of(RULE_PREFIX + ))),
+//                Arguments.of(Pair.of("Test DoNotUseObject", List.of(RULE_PREFIX + ))),
+                Arguments.of(Pair.of("Test ClassInsteadOfInterface", List.of(RULE_PREFIX + "1319"))),
+//                Arguments.of(Pair.of("Test EnumForClosedSet", List.of(RULE_PREFIX + ))),
+                Arguments.of(Pair.of("Test EmptyBlock",
+                        List.of(RULE_PREFIX + "2094", RULE_PREFIX + "1186", RULE_PREFIX + "108"))
                 )
+//                Arguments.of(Pair.of("Test PackageUsage", List.of(RULE_PREFIX + ))),
+//                Arguments.of(Pair.of("Test DynamicBinding", List.of(RULE_PREFIX + ))),
         );
-        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
     }
-
-//    @DisplayName("Test ObjectInsteadOfConcreteClass")
-//    @Test
-//    void testObjectInsteadOfConcreteClass() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
-//        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
-//    }
-
-//    @DisplayName("Test PublicEnumInsideClassAndNotInSeparateFile")
-//    @Test
-//    void testPublicEnumInsideClassAndNotInSeparateFile() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
-//        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
-//    }
-
-//    @DisplayName("Test VisibilityAsLowAsPossible")
-//    @Test
-//    void testVisibilityAsLowAsPossible() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
-//        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
-//    }
-
-    @DisplayName("Test Code Duplication")
-    @Test
-    void testCodeDuplication() {
-        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + "4144"));
-        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
-    }
-
-//    @DisplayName("Test CodeDuplicationRepetitionsFixableByInheritance")
-//    @Test
-//    void testCodeDuplicationRepetitionsFixableByInheritance() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
-//        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
-//    }
-
-//    @DisplayName("Test InheritanceInsteadOfEnums")
-//    @Test
-//    void testInheritanceInsteadOfEnums() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
-//        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
-//    }
-
-//    @DisplayName("Test OperationsInsteadOfDomain")
-//    @Test
-//    void testOperationsInsteadOfDomain() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
-//        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
-//    }
-
-//    @DisplayName("Test HardcodedLogic")
-//    @Test
-//    void testHardcodedLogic() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
-//        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
-//    }
-
-//    @DisplayName("Test StringReferences")
-//    @Test
-//    void testStringReferences() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
-//        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
-//    }
-
-//    @DisplayName("Test ExceptionsForControlFlow")
-//    @Test
-//    void testExceptionsForControlFlow() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
-//        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
-//    }
-
-//    @DisplayName("Test TryCatchBlock")
-//    @Test
-//    void testTryCatchBlock() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
-//        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
-//    }
-
-//    @DisplayName("Test UnspecifiedErrorMessage")
-//    @Test
-//    void testUnspecifiedErrorMessage() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
-//        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
-//    }
-
-
-//    @DisplayName("Test WrongLoopType")
-//    @Test
-//    void testWrongLoopType() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
-//        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
-//    }
-
-
-//    @DisplayName("Test UnnecessaryComplexity")
-//    @Test
-//    void testUnnecessaryComplexity() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
-//        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
-//    }
-
-//    @DisplayName("Test ClumsySolution")
-//    @Test
-//    void testClumsySolution() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
-//        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
-//    }
-
-//    @DisplayName("Test ParsingIntegerValues")
-//    @Test
-//    void testParsingIntegerValues() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
-//        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
-//    }
-
-    @DisplayName("Test UtilityClass")
-    @Test
-    void testUtilityClass() {
-        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + "1118"));
-        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
-    }
-
-//    @DisplayName("Test UnsafeCast")
-//    @Test
-//    void testUnsafeCast() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
-//        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
-//    }
-
-//    @DisplayName("Test EmptyConstructor")
-//    @Test
-//    void testEmptyConstructor() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
-//        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
-//    }
-
-//    @DisplayName("Test MeaninglessConstant")
-//    @Test
-//    void testMeaninglessConstant() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
-//        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
-//    }
-
-//    @DisplayName("Test Scanner")
-//    @Test
-//    void testScanner() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
-//        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
-//    }
-
-    @DisplayName("Test UnusedElement")
-    @Test
-    void testUnusedElement() {
-        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(
-                Arrays.asList(
-                        rulePrefix + "1144",
-                        rulePrefix + "1068",
-                        rulePrefix + "1481"
-                )
-        );
-        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
-    }
-
-//    @DisplayName("Test MissingThrowsInMethodSignature")
-//    @Test
-//    void testMissingThrowsInMethodSignature() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
-//        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
-//    }
-
-//    @DisplayName("Test PublicEnumInClass")
-//    @Test
-//    void testPublicEnumInClass() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
-//        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
-//    }
-
-//    @DisplayName("Test ParsingIntegerValues")
-//    @Test
-//    void testClassOfConstants() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
-//        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
-//    }
-
-//    @DisplayName("Test TrivialJavaDoc")
-//    @Test
-//    void testTrivialJavaDoc() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
-//        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
-//    }
-
-//    @DisplayName("Test BadNaming")
-//    @Test
-//    void testBadNaming() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
-//        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
-//    }
-
-//    @DisplayName("Test DataEncapsulationViolation")
-//    @Test
-//    void testDataEncapsulationViolation() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
-//        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
-//    }
-
-//    @DisplayName("Test SeparationOfLogicAndInteraction")
-//    @Test
-//    void testSeparationOfLogicAndInteraction() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
-//        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
-//    }
-
-//    @DisplayName("Test TooComplexCode")
-//    @Test
-//    void testTooComplexCode() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
-//        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
-//    }
-
-//    @DisplayName("Test StaticMethods")
-//    @Test
-//    void testStaticMethods() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
-//        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
-//    }
-
-    @DisplayName("Test StaticAttributeOfInstanceAttribute")
-    @Test
-    void testStaticAttributeOfInstanceAttribute() {
-        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + "1170"));
-        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
-    }
-
-    @DisplayName("Test FinalModifier")
-    @Test
-    void testFinalModifier() {
-        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + "3008"));
-        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
-    }
-
-//    @DisplayName("Test ParsingIntegerValues")
-//    @Test
-//    void testJavaAPI() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
-//        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
-//    }
-
-//    @DisplayName("Test ToStringVsEquals")
-//    @Test
-//    void testToStringVsEquals() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
-//        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
-//    }
-
-//    @DisplayName("Test DoNotUseObject")
-//    @Test
-//    void testDoNotUseObject() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
-//        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
-//    }
-
-    @DisplayName("Test ClassInsteadOfInterface")
-    @Test
-    void testClassInsteadOfInterface() {
-        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + "1319"));
-        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
-    }
-
-//    @DisplayName("Test EnumForClosedSet")
-//    @Test
-//    void testEnumForClosedSet() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
-//        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
-//    }
-
-    @DisplayName("Test EmptyBlock")
-    @Test
-    void testEmptyBlock() {
-        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(
-                Arrays.asList(
-                        rulePrefix + "2094",
-                        rulePrefix + "1186",
-                        rulePrefix + "108"
-                )
-        );
-        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
-    }
-
-//    @DisplayName("Test PackageUsage")
-//    @Test
-//    void testPackageUsage() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
-//        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
-//    }
-
-//    @DisplayName("Test DynamicBinding")
-//    @Test
-//    void testDynamicBinding() {
-//        ArrayList<String> relevantIssueNumbers = new ArrayList<String>(Arrays.asList(rulePrefix + ""));
-//        checkOccurringIssues(findOccurringIssues(relevantIssueNumbers));
-//    }
 
     @AfterAll
     public static void tearDownAfterClass() {
@@ -410,15 +144,15 @@ public class SonarQubeTests {
         }
     }
 
-    private List<Issue> findOccurringIssues(ArrayList<String> relevantIssueNumbers) {
+    private List<Issue> findOccurringIssues(List<String> relevantIssueNumbers) {
         return issues.stream().filter(issue -> relevantIssueNumbers.contains(issue.getRuleKey())).collect(Collectors.toList());
     }
 
     private static Path getJavaPlugin() {
-        String classpath = System.getProperty("java.class.path");
+        String classpath = System.getProperty(JAVA_CLASS_PATH);
         String[] classPathValues = classpath.split(File.pathSeparator);
         for (String classPath : classPathValues) {
-            if (classPath.contains("sonar-java-plugin"))
+            if (classPath.contains(SONAR_JAVA_PLUGIN))
                 return Path.of(classPath);
         }
         throw new IllegalStateException("Java Plugin not found!");
@@ -427,7 +161,7 @@ public class SonarQubeTests {
     private static List<ClientInputFile> getFiles(Path path) throws IOException {
         final var list = new ArrayList<ClientInputFile>();
         Files.walk(path).forEach(filePath -> {
-            if (filePath.getFileName().toString().endsWith(javaFilePrefix)) {
+            if (filePath.getFileName().toString().endsWith(JAVA_FILE_PREFIX)) {
                 list.add(new SonarFile(path, filePath));
             }
         });
@@ -438,5 +172,6 @@ public class SonarQubeTests {
     private static void listen(Issue i) {
         issues.add(i);
         System.err.println(i);
+        logger.debug("Issue added: ", issues);
     }
 }
